--- a/README
+++ b/README
@@ -1,3 +1,5 @@
 This is a git repo
 
 First project : Cloth Simulation
+
+This project would most likely be done in OpenGL on QT enviorment however its independent of any IDE.
